Mouse cursor is not updated after coming to a full stop while panning in the Blender render window #107523

Closed
opened 2023-05-02 03:38:09 +02:00 by Max Mustermann · 3 comments
First-time contributor

System Information
Operating system: Fedora Linux (Wayland, Gnome Shell 44.1)
Graphics card: AMD

Blender Version
Broken: 3.5.1

When panning in the final render and coming to a full stop before releasing the middle mouse button, the cursor is left on the screen. (See video)

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Render image
Hit F11
Pan with middle mouse button, come to a complete stop
Release middle mouse button

**System Information** Operating system: Fedora Linux (Wayland, Gnome Shell 44.1) Graphics card: AMD **Blender Version** Broken: 3.5.1 When panning in the final render and coming to a full stop before releasing the middle mouse button, the cursor is left on the screen. (See video) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Render image Hit F11 Pan with middle mouse button, come to a complete stop Release middle mouse button
Max Mustermann added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-02 03:38:10 +02:00
Member

Hi, thanks for the report. Unable to confirm on Windows
Could you check again in 3.6 build?: https://builder.blender.org/download/daily/

Hi, thanks for the report. Unable to confirm on Windows Could you check again in 3.6 build?: https://builder.blender.org/download/daily/
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-05-02 07:55:28 +02:00
Author
First-time contributor

It still happens on the latest 3.6 daily build.

It still happens on the latest 3.6 daily build.
Pratik Borhade added
Status
Needs Triage
Interest
Wayland
and removed
Status
Needs Information from User
labels 2023-05-02 14:49:05 +02:00
Member

Can confirm on linux/wayland.

WITH_GHOST_WAYLAND=OFF behaves properly (has a different cursor though).

CC @ideasman42

Can confirm on linux/wayland. WITH_GHOST_WAYLAND=OFF behaves properly (has a different cursor though). CC @ideasman42
Philipp Oeser added
Status
Confirmed
Platform
Linux
Module
User Interface
and removed
Status
Needs Triage
labels 2023-05-02 14:52:03 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-12 07:01:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107523
No description provided.