Fix #107523: Cursor not cleared when panning stops

Back ported from [0].

[0]: 4e4fc8c276c552904c27652b0d7734e92f2fffbb